Add Evan to AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Patrick McAndrew (@urg)
 José Borges Ferreira (@jcbf)
 James Macdonell (@TheNoButton)
 Phil Regnauld (@regnauld)
+Evan Fletcher <evan.fletcher@zuora.com>
 
 Thanks for feed-back also to:
   Ladislav Prskavec (@abtris)
