AUTHORS: Remove email address and add GitHub nick

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ Patrick McAndrew (@urg)
 José Borges Ferreira (@jcbf)
 James Macdonell (@TheNoButton)
 Phil Regnauld (@regnauld)
-Evan Fletcher <evan.fletcher@zuora.com>
+Evan Fletcher (@epf)
 
 Thanks for feed-back also to:
   Ladislav Prskavec (@abtris)
