mkblocks.sh: Add -L option to continue long record
Suggested by @mkearey
See https://github.com/spf-tools/spf-tools/issues/159

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ José Borges Ferreira (@jcbf)
 James Macdonell (@TheNoButton)
 Phil Regnauld (@regnauld)
 Evan Fletcher (@epf)
+@mkearey
 
 Thanks for feed-back also to:
   Ladislav Prskavec (@abtris)
