--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@ James Macdonell (@TheNoButton)
 Phil Regnauld (@regnauld)
 Evan Fletcher (@epf)
 @mkearey
+André Gaul (@andrenarchy)
 
 Thanks for feed-back also to:
   Ladislav Prskavec (@abtris)
